# Time_quadratures

./: .gitignore  .gitmodules  CMakeLists.txt  Deprecated.py  README.md  TimeQuadrature_helper.py  __init__.py  benchmark.cpp  betas.py  config.cmake  kernels.py  labels.py  makefile  mingw_toolchain.cmake  uninstall.cmake.in
benchmark/1600X/: FFT_conv_advanced.csv  FFT_conv_basic.csv  direct_conv_single_thread.csv
includes/: TimeQuad.h  TimeQuad_FFT.h  TimeQuad_FFT_advanced.h  TimeQuad_algorithm.h  TimeQuad_direct.h  TimeQuad_py.h  python_submodule.h
src/: TimeQuad.cpp  TimeQuad.h  TimeQuad.tpp  TimeQuad_FFT.cpp  TimeQuad_FFT.h  TimeQuad_FFT.tpp  TimeQuad_FFT_advanced.cpp  TimeQuad_FFT_advanced.tpp  TimeQuad_FFT_double.tpp  TimeQuad_FFT_double_to_Hist.tpp  TimeQuad_FFT_double_to_Hist2D.tpp  TimeQuad_FFT_float.tpp  TimeQuad_FFT_float_to_Hist.tpp  TimeQuad_FFT_float_to_Hist2D.tpp  TimeQuad_FFT_to_Hist.h  TimeQuad_FFT_to_Hist2D.h  TimeQuad_algorithm.cpp  TimeQuad_algorithm.h  TimeQuad_direct.cpp  TimeQuad_direct.h  TimeQuad_direct.hhh  TimeQuad_direct.tpp  TimeQuad_py.cpp  TimeQuad_py.h  python_submodule.cpp  python_submodule.h
